--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<p>Datos Extras</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Comenzar a Entranar!!</a>
+					<a href="/whatsapp/index.html" class="button style2 scrolly-middle">Comenzar a Entranar!!</a>
 				</footer>
 			</section>
 
@@ -88,7 +88,7 @@
 
 		<!-- Generic -->
 		
-			<article class="container box style3">
+			<!-- <article class="container box style3">
 				<header>
 					<h2>Generic Box</h2>
 					<p>Just a generic box. Nothing to see here.</p>
@@ -197,42 +197,7 @@
 						</table>
 					</div>
 				</section>
-				<section>
-					<header>
-						<h3>Form</h3>
-					</header>
-					<form method="post" action="#">
-						<div class="row">
-							<div class="col-6 col-12-mobile">
-								<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
-							</div>
-							<div class="col-6 col-12-mobile">
-								<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
-							</div>
-							<div class="col-12">
-								<select name="department" id="department">
-									<option value="">Choose a department</option>
-									<option value="1">Manufacturing</option>
-									<option value="2">Administration</option>
-									<option value="3">Support</option>
-								</select>
-							</div>
-							<div class="col-12">
-								<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
-							</div>
-							<div class="col-12">
-								<textarea name="message" id="message" placeholder="Enter your message"></textarea>
-							</div>
-							<div class="col-12">
-								<ul class="actions">
-									<li><input type="submit" value="Submit" /></li>
-									<li><input type="reset" class="style3" value="Clear Form" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
-				</section>
-			</article>
+			</article> -->
 		
 
 		<section id="footer">
@@ -240,6 +205,7 @@
 				<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="/whatsapp/index.html" class="icon brands fa-whatsapp"><span class="label">Whatasapp</span></a></li>
 				<!-- <li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li> -->
 				<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 				<!-- <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
