--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<p>Datos Extras</p>
 				</header>
 				<footer>
-					<a href="whatasapp.html" class="button style2 scrolly-middle">Comenzar a Entranar!!</a>
+					<a href="whatsapp.html" class="button style2 scrolly-middle">Comenzar a Entranar!!</a>
 				</footer>
 			</section>
 
