--- a/whatsapp.html
+++ b/whatsapp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
 
     <form id="formulario" class="formulario">
@@ -16,26 +18,30 @@
         </h1>
         <div class="box-input">
             <input name="nombre" id="nombre" type="text" required>
-            <span data-placeholder="Escriba su Nombre"></span>
+            <span data-placeholder="Escriba su Nombre y Apellido"></span>
         </div>
         <div class="box-input">
-            <input name="apellidos" id="apellidos" type="text" required>
-            <span data-placeholder="Escriba sus Apellidos"></span>
+            <input name="edad" id="edad" type="text" required>
+            <span data-placeholder="Escriba su edad"></span>
         </div>
         <div class="box-input">
-            <input name="email" id="email" type="text" required>
+            <input name="sms" id="sms" type="text" required>
             <span data-placeholder="Escriba su Mensaje"></span>
+        </div>
+        <div class="box-input">
+            <input name="email" id="email" type="email" required>
+            <span data-placeholder="Escriba su Email"></span>
         </div>
         <button id="submit" type="submit" class="boton"><i class="fab fa-whatsapp"></i> Enviar WhatsApp</button>
     </form>
 
     <script type="text/javascript">
-        $(".box-input input").on("focus", function(){
+        $(".box-input input").on("focus", function () {
             $(this).addClass("focus");
         });
 
-        $(".box-input input").on("blur", function(){
-            if($(this).val() == ""){
+        $(".box-input input").on("blur", function () {
+            if ($(this).val() == "") {
                 $(this).removeClass("focus");
             }
         });
@@ -45,4 +51,5 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <!-- <script src="whatsapp.js"></script> -->
 </body>
+
 </html>
